start of login/signup process

--- a/front-end/app/src/main/res/layout/activity_sign_in_up.xml
+++ b/front-end/app/src/main/res/layout/activity_sign_in_up.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.MainActivity">
+    tools:context=".view.signinupviews.SignInUpActivity">
 
     <FrameLayout
-        android:id="@+id/flFragmentMain"
+        android:id="@+id/flFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
