--- a/front-end/app/src/main/res/layout/activity_memorize.xml
+++ b/front-end/app/src/main/res/layout/activity_memorize.xml
@@ -56,8 +56,8 @@
                 <SeekBar
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:max="@dimen/seekMax"
-                    android:progress="@dimen/seekStartPos"
+                    android:max="10"
+                    android:progress="2"
                     android:id="@+id/seekbar"/>
                 <LinearLayout
                     android:layout_width="wrap_content"
