--- a/front-end/app/src/main/res/menu/nav_menu.xml
+++ b/front-end/app/src/main/res/menu/nav_menu.xml
@@ -4,4 +4,7 @@
         android:id="@+id/profile"
         android:title="Profile"
         android:icon="@drawable/ic_profile_foreground"/>
+    <item
+        android:id="@+id/logout"
+        android:title="Log out"/>
 </menu>
