--- a/front-end/app/src/main/res/layout/activity_memorize.xml
+++ b/front-end/app/src/main/res/layout/activity_memorize.xml
@@ -3,6 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -98,5 +102,7 @@
 
         </LinearLayout>
     </FrameLayout>
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
