--- a/front-end/app/src/main/res/layout/fragment_memorize.xml
+++ b/front-end/app/src/main/res/layout/fragment_memorize.xml
@@ -5,6 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".view.lessons.MemorizeFragment">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -91,5 +95,7 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    </ScrollView>
 
 </FrameLayout>
